Authentication y devolver API_KEY.

--- a/restaurant_api/.htaccess
+++ b/restaurant_api/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On
 RewriteRule ^([a-zA-Z_-]*)$ index.php?action=$1
 RewriteRule ^([a-zA-Z_-]*)/([0-9]+) index.php?action=$1&id=$2 [L,QSA]
+#RewriteRule ^([a-zA-Z_-]*)/([a-zA-Z_-]*)/([a-zA-Z_-]*) index.php?action=$1&u=$2&p=$3 [L,QSA]
